<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_5" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="sXk-oI-e15">
                                <rect key="frame" x="20" y="98" width="374" height="650"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lt1-gZ-yuC">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="23.666666666666668"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4bC-4c-v4H" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="338" height="23.666666666666668"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White (ios)"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VaR-hA-8Dl" userLabel="Index Label">
                                                <rect key="frame" x="338" y="0.0" width="36" height="23.666666666666668"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White (ios)"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="23N-tw-hvY" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="43.666666666666629" width="374" height="561"/>
                                        <color key="backgroundColor" name="YP White (ios)"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="23N-tw-hvY" secondAttribute="height" multiplier="2:3" id="I23-bd-xww"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше чем 5 ?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dfk-hk-T9S" userLabel="Question Label">
                                        <rect key="frame" x="0.0" y="624.66666666666663" width="374" height="25.333333333333371"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                        <color key="textColor" name="YP White (ios)"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="H5i-im-cs9">
                                <rect key="frame" x="20" y="768" width="374" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I97-qK-qiC" userLabel="No button">
                                        <rect key="frame" x="0.0" y="0.0" width="177" height="60"/>
                                        <color key="backgroundColor" name="YP White (ios)"/>
                                        <accessibility key="accessibilityConfiguration" identifier="No"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Нет">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="15"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HBW-Tr-llM"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dcJ-DM-rFq" userLabel="Yes button">
                                        <rect key="frame" x="197" y="0.0" width="177" height="60"/>
                                        <color key="backgroundColor" name="YP White (ios)"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Да">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="15"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LLx-4t-Brm"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="pnp-oq-lLn"/>
                                </constraints>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="OHK-hK-b2C">
                                <rect key="frame" x="197" y="438" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black (ios)"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VaR-hA-8Dl" secondAttribute="trailing" constant="20" id="60M-6d-URU"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sXk-oI-e15" secondAttribute="bottom" constant="80" id="Egi-Tr-BK3"/>
                            <constraint firstItem="sXk-oI-e15" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="G2q-KN-rTo"/>
                            <constraint firstItem="sXk-oI-e15" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="GfF-4A-9wm"/>
                            <constraint firstItem="OHK-hK-b2C" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="O3F-q2-i3j"/>
                            <constraint firstItem="OHK-hK-b2C" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="VgV-HA-RIl"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="H5i-im-cs9" secondAttribute="bottom" id="XNz-71-THZ"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Dfk-hk-T9S" secondAttribute="trailing" constant="20" id="hM4-RB-Pi3"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sXk-oI-e15" secondAttribute="trailing" constant="20" id="mas-45-Aap"/>
                            <constraint firstItem="H5i-im-cs9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="mmY-Q7-qfq"/>
                            <constraint firstItem="H5i-im-cs9" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="xWb-qt-Dil"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="OHK-hK-b2C" id="9Y3-Oc-9Po"/>
                        <outlet property="counterLabel" destination="VaR-hA-8Dl" id="MDZ-wF-87B"/>
                        <outlet property="imageView" destination="23N-tw-hvY" id="APF-BM-QeJ"/>
                        <outlet property="noButton" destination="I97-qK-qiC" id="4JN-V5-Kee"/>
                        <outlet property="textLabel" destination="Dfk-hk-T9S" id="Wkw-ME-kJW"/>
                        <outlet property="yesButton" destination="dcJ-DM-rFq" id="s4E-RS-dJ1"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-56.521739130434788" y="54.910714285714285"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black (ios)">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White (ios)">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
