...

    private func showQuizResult() {
        let gamesCount    = statisticService.gamesCount
        let bestGame      = statisticService.bestGame
        let totalAccuracy = statisticService.totalAccuracy

        let title   = "Этот раунд окончен!"
        let message = """
                      Ваш результат: \(correctAnswers)/\(questionFactory.totalQuestionsCount)
                      Сыграно квизов: \(gamesCount)
                      Рекорд: \(bestGame.correct)/\(bestGame.total) (\(bestGame.date))
                      Средняя точность: \(String(format: "%.2f", totalAccuracy))%
                      """
...
    }

    private func showNetworkError(message: String) {
        let alertModel = AlertModel(
            title: "Ошибка",
            message: message,
            buttonText: "Попробовать ещё раз"
        ) { [weak self] in
            self?.resetGame()
        }
        alertPresenter.show(model: alertModel)
    }
}
...
